map places ui implementation

--- a/travel-companion-frontend/public/index.html
+++ b/travel-companion-frontend/public/index.html
@@ -26,6 +26,10 @@
     <title>Travel Companion</title>
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMK3vI-Vqdf6l-EwT7xTw3UF-3npnKBGY&libraries=places"></script>
+
+    <!-- <script src="https://maps.googleapis.com/maps/api/place/nearbysearch/json?key=AIzaSyAMK3vI-Vqdf6l-EwT7xTw3UF-3npnKBGY&location=19.663280,75.300293&radius=50000&type=tourist_attraction"></script> -->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
